--- a/Exercicios/Ex007/index1.html
+++ b/Exercicios/Ex007/index1.html
@@ -13,6 +13,7 @@
         Anatomia das tabelas grandes
         
         table
+        caption
             thead
                 tr, td, th
             tbody
@@ -22,6 +23,7 @@
 
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <th>Estado</th>
             <th>População</th>
@@ -76,8 +78,14 @@
             </tr>
         </tfoot>
 
-
     </table>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium tempore explicabo neque modi blanditiis, ipsum accusamus iusto possimus harum ad cum adipisci ipsa quisquam corporis ratione alias, doloribus quae quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea odit perspiciatis maxime recusandae fuga assumenda velit sapiente! Esse accusamus iste molestias error! Dolor eos laudantium fugit vitae odit numquam Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet laborum esse impedit alias cum quae soluta fugiat, incidunt odio sed perspiciatis vero id magnam debitis ipsa, ducimus, totam doloribus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam voluptatibus neque, harum repudiandae distinctio sint aliquam libero quis dolorum, culpa delectus ex aperiam, excepturi perspiciatis explicabo similique voluptate nisi corporis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium tempore explicabo neque modi blanditiis, ipsum accusamus iusto possimus harum ad cum adipisci ipsa quisquam corporis ratione alias, doloribus quae quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea odit perspiciatis maxime recusandae fuga assumenda velit sapiente! Esse accusamus iste molestias error! Dolor eos laudantium fugit vitae odit numquam Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet laborum esse impedit alias cum quae soluta fugiat, incidunt odio sed perspiciatis vero id magnam debitis ipsa, ducimus, totam doloribus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam voluptatibus neque, harum repudiandae distinctio sint aliquam libero quis dolorum, culpa delectus ex aperiam, excepturi perspiciatis explicabo similique voluptate nisi corporis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium tempore explicabo neque modi blanditiis, ipsum accusamus iusto possimus harum ad cum adipisci ipsa quisquam corporis ratione alias, doloribus quae quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea odit perspiciatis maxime recusandae fuga assumenda velit sapiente! Esse accusamus iste molestias error! Dolor eos laudantium fugit vitae odit numquam Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet laborum esse impedit alias cum quae soluta fugiat, incidunt odio sed perspiciatis vero id magnam debitis ipsa, ducimus, totam doloribus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam voluptatibus neque, harum repudiandae distinctio sint aliquam libero quis dolorum, culpa delectus ex aperiam, excepturi perspiciatis explicabo similique voluptate nisi corporis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium tempore explicabo neque modi blanditiis, ipsum accusamus iusto possimus harum ad cum adipisci ipsa quisquam corporis ratione alias, doloribus quae quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea odit perspiciatis maxime recusandae fuga assumenda velit sapiente! Esse accusamus iste molestias error! Dolor eos laudantium fugit vitae odit numquam Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet laborum esse impedit alias cum quae soluta fugiat, incidunt odio sed perspiciatis vero id magnam debitis ipsa, ducimus, totam doloribus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam voluptatibus neque, harum repudiandae distinctio sint aliquam libero quis dolorum, culpa delectus ex aperiam, excepturi perspiciatis explicabo similique voluptate nisi corporis</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium tempore explicabo neque modi blanditiis, ipsum accusamus iusto possimus harum ad cum adipisci ipsa quisquam corporis ratione alias, doloribus quae quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea odit perspiciatis maxime recusandae fuga assumenda velit sapiente! Esse accusamus iste molestias error! Dolor eos laudantium fugit vitae odit numquam Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet laborum esse impedit alias cum quae soluta fugiat, incidunt odio sed perspiciatis vero id magnam debitis ipsa, ducimus, totam doloribus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam voluptatibus neque, harum repudiandae distinctio sint aliquam libero quis dolorum, culpa delectus ex aperiam, excepturi perspiciatis explicabo similique voluptate nisi corporis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium tempore explicabo neque modi blanditiis, ipsum accusamus iusto possimus harum ad cum adipisci ipsa quisquam corporis ratione alias, doloribus quae quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea odit perspiciatis maxime recusandae fuga assumenda velit sapiente! Esse accusamus iste molestias error! Dolor eos laudantium fugit vitae odit numquam Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis amet laborum esse impedit alias cum quae soluta fugiat, incidunt odio sed perspiciatis vero id magnam debitis ipsa, ducimus, totam doloribus Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam voluptatibus neque, harum repudiandae distinctio sint aliquam libero quis dolorum, culpa delectus ex aperiam, excepturi perspiciatis explicabo similique voluptate nisi corporis.</p>
+                
 
 </body>
 </html>
