--- a/desafio/desafio13/index.html
+++ b/desafio/desafio13/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 13</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut ico" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
     <main>
