--- a/Pratica/home.html
+++ b/Pratica/home.html
@@ -17,7 +17,7 @@
             <a href="#" target="_blank">Comprar</a>
             <a href="#" target="_blank">Contato</a>
             <a href="#" target="_blank">Produtos</a>
-            <a href="#" target="_blank" id="cadastro">Cadastre-se</a> 
+            <a href="#" target="_blank">Cadastre-se</a> 
         </div>
 
         <h1>EMPORIO</h1>       
