--- a/Pratica/home.html
+++ b/Pratica/home.html
@@ -9,16 +9,18 @@
 </head>
 <body>
 
-    
+    <nav id="menu">
+
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Notícias</a></li>
+            <li><a href="#">Curiosidades</a></li>
+            <li><a href="#">Fale Conosco</a></li>
+        </ul>
+
+    </nav>
 
     <header class="letras">
-
-        <div id="cabecalho">
-            <a href="#" target="_blank">Comprar</a>
-            <a href="#" target="_blank">Contato</a>
-            <a href="#" target="_blank">Produtos</a>
-            <a href="#" target="_blank">Cadastre-se</a> 
-        </div>
 
         <h1>EMPORIO</h1>       
 
