--- a/Pratica/produtos.html
+++ b/Pratica/produtos.html
@@ -30,19 +30,19 @@
 
         <div id="Produto">
 
-            <a href="#">
+            <a href="#" target="_blank">
                 <p class="Produto1"></p>
             </a>
         
-            <a href="#">
+            <a href="#" target="_blank">
                 <p class="Produto2"></p>
             </a>
 
-            <a href="">
+            <a href="#" target="_blank">
                 <p class="Produto3"></p>
             </a>
             
-            <a href="">
+            <a href="#" target="_blank">
                 <p class="Produto4"></p>
             </a>
 
