--- a/Pratica/home.html
+++ b/Pratica/home.html
@@ -16,8 +16,11 @@
         <div id="cabecalho">
 
             <a href="#" target="_blank">Comprar</a>
+
             <a href="#" target="_blank">Contato</a>
-            <a href="#" target="_blank">Produtos</a>
+
+            <a href="produtos.html" target="_blank">Produtos</a>
+
             <a href="#" target="_blank" id="cadastro">Cadastro</a> 
 
         </div>
