--- a/Pratica/home.html
+++ b/Pratica/home.html
@@ -15,7 +15,9 @@
 
         <div id="cabecalho">
 
-            <a href="#" target="_blank">Comprar</a>
+            <a href="home.html">Home</a>
+
+            <a href="produtos.html" target="_blank">Comprar</a>
 
             <a href="#" target="_blank">Contato</a>
 
@@ -70,7 +72,7 @@
 
             <h2 class="letras">DESCUBRA A MODA DO SEU JEITO</h2>
 
-            <a class="letras" href="#">COMPRE AGORA</a>
+            <a class="letras" href="produtos.html">COMPRE AGORA</a>
 
         </div>
 
