--- a/Pratica/home.html
+++ b/Pratica/home.html
@@ -13,7 +13,7 @@
 
     <header>
 
-        <div id="cabecalho">
+        <nav id="cabecalho">
 
             <a href="home.html">Home</a>
 
@@ -25,7 +25,7 @@
 
             <a href="#" target="_blank" id="cadastro">Cadastro</a> 
 
-        </div>
+        </nav>
 
         <h1>EMPORIO</h1>       
 
