--- a/Pratica/home.html
+++ b/Pratica/home.html
@@ -17,7 +17,7 @@
 
             <a href="home.html">Home</a>
 
-            <a href="produtos.html" target="_blank">Comprar</a>
+            <a href="produtos.html" target="_self">Comprar</a>
 
             <a href="#" target="_blank">Contato</a>
 
