--- a/Pratica/produtos.html
+++ b/Pratica/produtos.html
@@ -38,7 +38,7 @@
                     <img src="fotos/ColeteAzul.jfif" alt="Colete azul escuro">
 
                     <p>Colete Azul Escuro</p>
-                    <a href="#" target="_blank">Comprar Agora</a>
+                    <a href="#" target="_self">Comprar Agora</a>
 
                 </p>
             </section>
@@ -50,7 +50,7 @@
                     <img src="fotos/ColeteAzul.jfif" alt="Colete azul escuro">
 
                     <p class="marcado">Colete Azul Escuro</p>
-                    <a href="#" target="_blank">Comprar Agora</a>
+                    <a href="#" target="_self">Comprar Agora</a>
                 </p>
             </section>
 
@@ -61,7 +61,7 @@
                     <img src="fotos/02f53bda666ee9dcdc3696c79838cb95.jpg" alt="Terno Cinza Listrado">
 
                     <p>Terno Cinza Listrado</p>
-                    <a href="#" target="_blank">Comprar Agora</a>
+                    <a href="#" target="_self">Comprar Agora</a>
 
                 </p>
             </section>
@@ -72,7 +72,7 @@
                     <img src="fotos/02f53bda666ee9dcdc3696c79838cb95.jpg" alt="Terno Cinza Listrado">
 
                     <p>Terno Cinza Listrado</p>
-                    <a href="#" target="_blank">Comprar Agora</a>
+                    <a href="#" target="_self">Comprar Agora</a>
 
                 </p>
             </section>
