--- a/Pratica/produtos.html
+++ b/Pratica/produtos.html
@@ -12,10 +12,9 @@
 
         <nav id="cabecalho">
 
-            <a href="home.html">Home</a>
+            <a href="home.html" target="_self">Home</a>
             <a href="#" target="_blank">Comprar</a>
             <a href="#" target="_blank">Contato</a>
-            <a href="#" target="_blank">Produtos</a>
             <a href="#" target="_blank" id="cadastro">Cadastro</a> 
 
         </nav>
