--- a/Pratica/home.html
+++ b/Pratica/home.html
@@ -17,11 +17,11 @@
 
             <a href="home.html">Home</a>
 
-            <a href="produtos.html" target="_self">Comprar</a>
+            <a href="produtos.html" target="_blank">Comprar</a>
 
             <a href="#" target="_blank">Contato</a>
 
-            <a href="produtos.html" target="_blank">Produtos</a>
+            <a href="produtos.html" target="_self">Produtos</a>
 
             <a href="#" target="_blank" id="cadastro">Cadastro</a> 
 
