--- a/Pratica/produtos.html
+++ b/Pratica/produtos.html
@@ -15,7 +15,7 @@
             <a href="home.html" target="_self">Home</a>
             <a href="#" target="_blank">Comprar</a>
             <a href="#" target="_blank">Contato</a>
-            <a href="#" target="_blank" id="cadastro">Cadastro</a> 
+            <a href="#" target="_self" id="cadastro">Cadastro</a> 
 
         </nav>
 
