--- a/Pratica/home.html
+++ b/Pratica/home.html
@@ -19,7 +19,7 @@
 
             <a href="produtos.html" target="_blank">Comprar</a>
 
-            <a href="#" target="_blank">Contato</a>
+            <a href="contato.html" target="_blank">Contato</a>
 
             <a href="produtos.html" target="_self">Produtos</a>
 
