--- a/Pratica/cadastro.html
+++ b/Pratica/cadastro.html
@@ -10,6 +10,22 @@
 <body>
     <header>
 
+        <nav id="cabecalho">
+
+            <a href="home.html">Home</a>
+
+            <a href="produtos.html" target="_blank">Comprar</a>
+
+            <a href="produtos.html" target="_self">Produtos</a>
+
+            <a href="#" target="_blank" id="cadastro">Cadastro</a> 
+
+        </nav>
+        
+    </header>
+
+    <main>
+
         <form action="form.php">
 
             <fieldset>
@@ -38,10 +54,6 @@
             </fieldset>
     
         </form>
-
-    </header>
-
-    <main>
 
     </main>
 
