--- a/Pratica/cadastro.html
+++ b/Pratica/cadastro.html
@@ -18,7 +18,9 @@
 
             <a href="produtos.html" target="_self">Produtos</a>
 
-            <a href="#" target="_blank" id="cadastro">Cadastro</a> 
+            <a href="contato.html" target="_blank">Contato</a>
+
+            <a href="cadastro.html" target="_blank" id="cadastro">Cadastro</a> 
 
         </nav>
         
