--- a/Pratica/contato.html
+++ b/Pratica/contato.html
@@ -19,7 +19,7 @@
 
             <a href="produtos.html" target="_self">Produtos</a>
 
-            <a href="#" target="_blank" id="cadastro">Cadastro</a> 
+            <a href="cadastro.html" target="_blank" id="cadastro">Cadastro</a> 
 
         </nav>
 
