--- a/Pratica/home.html
+++ b/Pratica/home.html
@@ -19,11 +19,11 @@
 
             <a href="produtos.html" target="_blank">Comprar</a>
 
-            <a href="contato.html" target="_blank">Contato</a>
-
             <a href="produtos.html" target="_self">Produtos</a>
 
-            <a href="#" target="_blank" id="cadastro">Cadastro</a> 
+            <a href="contato.html" target="_blank">Contato</a>
+
+            <a href="Cadastro" target="_blank" id="cadastro">Cadastro</a> 
 
         </nav>
 
