--- a/Pratica/produtos.html
+++ b/Pratica/produtos.html
@@ -13,9 +13,12 @@
         <nav id="cabecalho">
 
             <a href="home.html" target="_self">Home</a>
-            <a href="#" target="_blank">Comprar</a>
-            <a href="#" target="_blank">Contato</a>
-            <a href="#" target="_self" id="cadastro">Cadastro</a> 
+            
+            <a href="produtos.html" target="_blank">Comprar</a>
+
+            <a href="contato.html" target="_blank">Contato</a>
+
+            <a href="cadastro.html" target="_self" id="cadastro">Cadastro</a> 
 
         </nav>
 
