--- a/Pratica/contato.html
+++ b/Pratica/contato.html
@@ -15,10 +15,12 @@
 
             <a href="home.html">Home</a>
 
-            <a href="produtos.html" target="_blank">Comprar</a>
+            <a href="produtos.html" target="_self">Comprar</a>
 
             <a href="produtos.html" target="_self">Produtos</a>
 
+            <a href="contato.html" target="_blank">Contato</a>
+            
             <a href="cadastro.html" target="_blank" id="cadastro">Cadastro</a> 
 
         </nav>
