--- a/Pratica/produtos.html
+++ b/Pratica/produtos.html
@@ -14,11 +14,11 @@
 
             <a href="home.html" target="_self">Home</a>
             
-            <a href="produtos.html" target="_blank">Comprar</a>
+            <a href="produtos.html" target="_self">Comprar</a>
 
             <a href="contato.html" target="_blank">Contato</a>
 
-            <a href="cadastro.html" target="_self" id="cadastro">Cadastro</a> 
+            <a href="cadastro.html" target="_blank" id="cadastro">Cadastro</a> 
 
         </nav>
 
