--- a/Pratica/cadastro.html
+++ b/Pratica/cadastro.html
@@ -14,13 +14,13 @@
 
             <a href="home.html">Home</a>
 
-            <a href="produtos.html" target="_blank">Comprar</a>
+            <a href="produtos.html" target="_self">Comprar</a>
 
             <a href="produtos.html" target="_self">Produtos</a>
 
             <a href="contato.html" target="_blank">Contato</a>
 
-            <a href="cadastro.html" target="_blank" id="cadastro">Cadastro</a> 
+            <a href="cadastro.html" target="_self" id="cadastro">Cadastro</a> 
 
         </nav>
         
