--- a/Pratica/home.html
+++ b/Pratica/home.html
@@ -23,7 +23,7 @@
 
             <a href="contato.html" target="_blank">Contato</a>
 
-            <a href="Cadastro" target="_blank" id="cadastro">Cadastro</a> 
+            <a href="cadastro.html" target="_blank" id="cadastro">Cadastro</a> 
 
         </nav>
 
