--- a/testes/bootstrap/teste1.html
+++ b/testes/bootstrap/teste1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="teste1.css">
     <title>Teste de uso dos Bootstrap</title>
 </head>
 <body>
@@ -88,6 +89,12 @@
     
             <label for="exampleFormControlTextarea1">Exemplo de textarea</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  
+        </div>
+        <div class="form-group">
+    
+            <label for="exampleFormControlTextarea1">Exemplo de textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"></textarea>
   
         </div>
 </form>
